--- a/index.html
+++ b/index.html
@@ -71,36 +71,6 @@
             color: #00bcd4;
         }
 
-        .about {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 50px 10%;
-            background: #102a43;
-        }
-
-        .about img {
-            width: 300px;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .about-content {
-            max-width: 600px;
-            margin-left: 40px;
-        }
-
-        .about-content h2 {
-            font-size: 36px;
-            font-weight: 600;
-            margin-bottom: 10px;
-        }
-
-        .about-content p {
-            line-height: 1.6;
-            margin-bottom: 15px;
-        }
-
         .section {
             margin-bottom: 40px;
             text-align: center;
@@ -111,27 +81,6 @@
             font-weight: 600;
             margin-bottom: 20px;
         }
-
-        .section ul {
-            list-style-type: none;
-            padding: 0;
-            display: inline-block;
-            text-align: left;
-        }
-
-        .section ul li {
-            margin-bottom: 10px;
-        }
-
-        .section ul li a {
-            color: #ededed;
-            text-decoration: none;
-        }
-
-        .section ul li a:hover {
-            color: #00bcd4;
-        }
-
     </style>
 </head>
 <body>
@@ -141,6 +90,7 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
+            <a href="#activities">Activities</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -157,18 +107,6 @@
         </div>
     </section>
 
-    <section class="about" id="about">
-        <img src="images/pic.jpg" alt="Brent Benigay's profile picture">
-        <div class="about-content">
-            <h2>About Me</h2>
-            <p>
-                Hello! I am Brent Benigay. I've studied Python and Java as my basic programming languages.
-                 an aspiring software developer with a passion for learning and creating. 
-                 I enjoy exploring new technologies and improving my skills in web and software development.
-            </p>
-        </div>
-    </section>
-
     <section id="projects" class="section">
         <h2>My Works</h2>
         <ul>
@@ -177,15 +115,20 @@
         </ul>
     </section>
 
+    <section id="activities" class="section">
+        <h2>Activities</h2>
+        <h2><a href="https://bkuroko.github.io/hahahys.github.io/" target="_blank">PIT2</a></h2>
+        <h2><a href="https://bkuroko.github.io/wew.github.io/" target="_blank">PIT3</a></h2>
+        <h2><a href="https://bkuroko.github.io/JSON-file.github.io/" target="_blank">PIT4</a></h2>
+    </section>
+
     <section id="contact" class="section">
         <h2>Contact</h2>
         <ul>
             <li>Email: <a href="mailto:benigay.brent@gmail.com">benigay.brent@gmail.com</a></li>
-            <li>Fb: <a href="https://www.facebook.com/brentoy.benigay?mibextid=ZbWKwL" target="_blank">https://www.facebook.com/brentoy.benigay?mibextid=ZbWKwL</a></li>
+            <li>Fb: <a href="https://www.facebook.com/brentoy.benigay?mibextid=ZbWKwL" target="_blank">Facebook Profile</a></li>
             <li><strong>Phone:</strong> +63 997 384 3324</li>
         </ul>
     </section>
-
 </body>
 </html>
-  
