--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
         </div>
     </section>
 
+    <section class="about" id="about">
+        <img src="images/pic.jpg" alt="Brent Benigay's profile picture">
+        <div class="about-content">
+            <h2>About Me</h2>
+            <p>
+                Hello! I am Brent Benigay. I've studied Python and Java as my basic programming languages.
+                an aspiring software developer with a passion for learning and creating. 
+                I enjoy exploring new technologies and improving my skills in web and software development.
+            </p>
+        </div>
+    </section>
+
     <section id="projects" class="section">
         <h2>My Works</h2>
         <ul>
@@ -119,7 +131,6 @@
         <h2>Activities</h2>
         <h2><a href="https://bkuroko.github.io/hahahys.github.io/" target="_blank">PIT2</a></h2>
         <h2><a href="https://bkuroko.github.io/wew.github.io/" target="_blank">PIT3</a></h2>
-        <h2><a href="https://bkuroko.github.io/JSON-file.github.io/" target="_blank">PIT4</a></h2>
     </section>
 
     <section id="contact" class="section">
