--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <h2>Activities</h2>
         <h2><a href="https://bkuroko.github.io/hahahys.github.io/" target="_blank">PIT2</a></h2>
         <h2><a href="https://bkuroko.github.io/wew.github.io/" target="_blank">PIT3</a></h2>
-        <h2><a href="https://bkuroko.github.io/JSON-file.github.io/" target="_blank">PIT4</a></h2>
+        <h2><a href="https://bkuroko.github.io/json-courses.github.io/" target="_blank">PIT4</a></h2>
         <h2><a href="https://bkuroko.github.io/JSON-file.github.io/" target="_blank">QUIZ4</a></h2>
     </section>
 
