--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
         <h2><a href="https://bkuroko.github.io/json-courses.github.io/" target="_blank">PIT4</a></h2>
         <h2><a href="https://bkuroko.github.io/JSON-file.github.io/" target="_blank">QUIZ4</a></h2>
          <h2><a href="https://bkuroko.github.io/todo-app/" target="_blank">QUIZ5</a></h2>
+        <h2><a href="https://bkuroko.github.io/todo-app/" target="_blank">Laravel_CRUD</a></h2>
     </section>
 
     <section id="contact" class="section">
